--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
-    username: root
+    url: jdbc:mysql://localhost:3306/jpashop
+    username: root # 시간되면 별도 계정을 만들어서 권한이 제한된 걸로 바꿔야
     password: DLWlsdn1!!
+  jpa:
+    hibernate:
+      ddl-auto: create # 어플리케이션이 시작할 때 entity class에 매핑되는 테이블을 자동으로 생성해준다.
+      #ddl-auto: create-drop # 어플리케이션이 종료될 때 drop명령어로 자동으로 생성해줬던 테이블들을 모두 삭제시켜버리는 옵션
