--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	// runtimeOnly 'com.h2database:h2'  // <- H2 DB를 사용할 때
+	// runtimeOnly 'mysql:mysql-connector-java' // <- mysql을 사용할 때, 참고 : https://velog.io/@ddusi/Spring-1
+	implementation 'mysql:mysql-connector-java:8.0.32'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
